Cover diagonal hidden-frame connectivity